--- a/packages/drawer/package.json
+++ b/packages/drawer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-navigation/drawer",
   "description": "Drawer navigator component with animated transitions and gesturess",
-  "version": "5.11.7",
+  "version": "5.11.11",
   "keywords": [
     "react-native-component",
     "react-component",
@@ -41,6 +41,8 @@
     "clean": "del lib"
   },
   "dependencies": {
+    "@types/color": "^3.0.1",
+    "@types/jest": "^26.0.20",
     "color": "^3.1.3",
     "react-native-iphone-x-helper": "^1.3.0"
   },
