--- a/packages/drawer/tsconfig.json
+++ b/packages/drawer/tsconfig.json
@@ -29,6 +29,9 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "esnext"
-  }
+    "target": "esnext",
+  },
+  "exclude": [
+    "node_modules",
+  ]
 }
